实现用户注册功能，未使用真实雪花算法，未启用seata事务

--- a/docs/系统设计.md
+++ b/docs/系统设计.md
@@ -1,8 +1,5 @@
- ---
-
 ## 系统架构设计
-### 总体架构设计
-我们将系统拆分为 **用户服务、权限服务、日志服务** 四个核心微服务，并依赖一套标准化的基础架构层（Nacos, RocketMQ等）。通过 API 网关对外提供统一、安全的入口。
+我们将系统拆分为 **用户服务、权限服务、日志服务** 四个核心微服务，并依赖一套标准化的基础架构层（Nacos, RocketMQ等）。
 
 #### 系统架构图
 ![](https://cdn.nlark.com/yuque/0/2025/png/56328710/1750227015714-f01c1349-8ee5-42de-ad2c-8f01f5276b34.png)
@@ -33,7 +30,7 @@
 
 
 
- ---
+---
 
 
 
@@ -68,7 +65,7 @@
 | **1. 异步记录操作日志** | 异步消费MQ中的日志消息，并将其持久化到`operation_logs`数据库表中。 | `系统内部 (MQ消费者)` |
 
 
- ---
+---
 
 ## 系统技术骨架
 ### 一、 核心框架与服务治理
@@ -140,7 +137,7 @@
 
 
 
- ---
+---
 
 
 
@@ -159,7 +156,7 @@
 | **9. 重置密码** | `<font style="color:rgb(26, 28, 30);">Spring Boot (Web/MVC)</font>`<font style="color:rgb(26, 28, 30);">, </font>`<font style="color:rgb(26, 28, 30);">JWT</font>`<font style="color:rgb(26, 28, 30);">, </font>`<font style="color:rgb(26, 28, 30);">OpenFeign</font>`<font style="color:rgb(26, 28, 30);">, </font>`<font style="color:rgb(26, 28, 30);">Nacos</font>`<font style="color:rgb(26, 28, 30);">, </font>`<font style="color:rgb(26, 28, 30);">ShardingSphere-JDBC</font>`<font style="color:rgb(26, 28, 30);">, </font>`<font style="color:rgb(26, 28, 30);">MySQL</font>`<font style="color:rgb(26, 28, 30);">, </font>`<font style="color:rgb(26, 28, 30);">RocketMQ</font>` | <font style="color:rgb(26, 28, 30);">1. </font>**Spring Boot**<font style="color:rgb(26, 28, 30);">：提供接口。</font><font style="color:rgb(26, 28, 30);">   </font><font style="color:rgb(26, 28, 30);">2. </font>**JWT + OpenFeign + Nacos**<font style="color:rgb(26, 28, 30);">：与功能5一样，先进行权限校验，确保操作者是管理员或超管。</font><font style="color:rgb(26, 28, 30);">   </font><font style="color:rgb(26, 28, 30);">3. </font>**ShardingSphere-JDBC + MySQL**<font style="color:rgb(26, 28, 30);">：权限通过后，直接</font>`<font style="color:rgb(26, 28, 30);">UPDATE</font>`<font style="color:rgb(26, 28, 30);">目标用户的密码。</font><font style="color:rgb(26, 28, 30);">   </font><font style="color:rgb(26, 28, 30);">4. </font>**RocketMQ**<font style="color:rgb(26, 28, 30);">：发送"RESET_PASSWORD"日志消息。</font> |
 
 
- ---
+---
 
 ### **二、 权限与角色 (permission-service)**
 | <font style="color:rgb(26, 28, 30);">功能点 (Feature)</font> | <font style="color:rgb(26, 28, 30);">涉及的技术组件</font> | <font style="color:rgb(26, 28, 30);">核心交互/逻辑</font> |
@@ -171,7 +168,7 @@
 | **5. 降级用户角色** | `<font style="color:rgb(26, 28, 30);">Spring Boot (Web/MVC)</font>`<font style="color:rgb(26, 28, 30);">, </font>`<font style="color:rgb(26, 28, 30);">MySQL</font>`<font style="color:rgb(26, 28, 30);">, </font>`<font style="color:rgb(26, 28, 30);">RocketMQ</font>`<font style="color:rgb(26, 28, 30);"> (可选)</font> | <font style="color:rgb(26, 28, 30);">与功能4逻辑完全相同，只是将</font>`<font style="color:rgb(26, 28, 30);">role_id</font>`<font style="color:rgb(26, 28, 30);">更新为"普通用户"的</font>`<font style="color:rgb(26, 28, 30);">role_id</font>`<font style="color:rgb(26, 28, 30);">，并发送"DOWNGRADE_ROLE"日志消息。</font> |
 
 
- ---
+---
 
 ### **三、 日志 (logging-service)**
 | <font style="color:rgb(26, 28, 30);">功能点 (Feature)</font> | <font style="color:rgb(26, 28, 30);">涉及的技术组件</font> | <font style="color:rgb(26, 28, 30);">核心交互/逻辑</font> |
@@ -181,7 +178,7 @@
 
 
 
- ---
+---
 
 
 
@@ -190,10 +187,10 @@
 
 下面我将为这个用户权限管理系统中所有需要对外或对内暴露的功能点设计RESTful接口。
 
- ---
+---
 
 ### **接口设计约定**
-+ **Base URL**:  `user-service` 的基础路径是 `/api/user`，`permission-service` 的基础路径是 `/api/permission`。
++ **Base URL**:  `user-service` 的基础路径是 `/user`，`permission-service` 的基础路径是 `/permission`。
 + **统一响应格式**: 所有接口返回统一的JSON结构，便于客户端处理。
 
 ```json
@@ -207,10 +204,10 @@
 + **认证**: 需要登录的接口，客户端需在请求头中携带 `Authorization: Bearer <jwt_token>`。
 + **内部接口**: 供服务间调用的接口，路径以 `/internal` 开头，以示区分。这些接口不应直接暴露给外部用户。
 
- ---
+---
 
 ### **一、 用户服务 (User Service)**
-**服务基础路径**: `/api/user`
+**服务基础路径**: `/user`
 
 | 功能点 | HTTP方法 | URL路径 | 请求体 (Request Body) / 查询参数 (Query Params) | 权限要求 | 成功响应 (200 OK) |
 | --- | --- | --- | --- | --- | --- |
@@ -219,35 +216,35 @@
 | **3. 用户登出** | `POST` | `/logout` | _无_ | 登录用户 | `{ "code": 200, "message": "登出成功", "data": null }` |
 | **4. 获取当前用户信息** | `GET` | `/me` | _无_ | 登录用户 | `{ "code": 200, "message": "Success", "data": { "userId": 123, "username": "test", "email": "test@example.com", "phone": "138..." } }` |
 | **5. 分页查询用户列表** | `GET` | `/users` | **Params**: `page=1`, `size=10`, `sort=gmt_create,desc`, `username=test` (可选) | 管理员, 超管 | `{ "code": 200, "message": "Success", "data": { "content": [ ...user objects... ], "page": 1, "size": 10, "totalPages": 5, "totalElements": 48 } }` |
-| **6. 查询指定用户信息** | `GET` | `/users/{userId}` | _无_ (userId从路径获取) | 本人, 管理员, 超管 | `{ "code": 200, "message": "Success", "data": { "userId": 456, "username": "anotherUser", ... } }` |
-| **7. 修改用户信息** | `PUT` | `/users/{userId}` | **Body**: `{ "email": "new.email@example.com", "phone": "139..." }` | 本人, 管理员, 超管 | `{ "code": 200, "message": "用户信息修改成功", "data": { ...updated user object... } }` |
+| **6. 查询指定用户信息** | `GET` | `/user/{userId}` | _无_ (userId从路径获取) | 本人, 管理员, 超管 | `{ "code": 200, "message": "Success", "data": { "userId": 456, "username": "anotherUser", ... } }` |
+| **7. 修改用户信息** | `PUT` | `/user/{userId}` | **Body**: `{ "email": "new.email@example.com", "phone": "139..." }` | 本人, 管理员, 超管 | `{ "code": 200, "message": "用户信息修改成功", "data": { ...updated user object... } }` |
 | **8. 修改密码** | `PUT` | `/password` | **Body**: `{ "oldPassword": "string", "newPassword": "string" }` | 本人 | `{ "code": 200, "message": "密码修改成功", "data": null }` |
-| **9. 重置密码** | `POST` | `/users/{userId}/reset-password` | _无_ | 管理员, 超管 | `{ "code": 200, "message": "密码已重置为: <new_random_password>", "data": { "newPassword": "<new_random_password>" } }` |
+| **9. 重置密码** | `POST` | `/user/{userId}/reset-password` | _无_ | 管理员, 超管 | `{ "code": 200, "message": "密码已重置为: <new_random_password>", "data": { "newPassword": "<new_random_password>" } }` |
 
 
- ---
+---
 
 ### **二、 权限服务 (Permission Service)**
-**服务基础路径**: `/api/permission`
+**服务基础路径**: `/permission`
 
 | 功能点 | HTTP方法 | URL路径 | 请求体 (Request Body) / 查询参数 (Query Params) | 权限要求 | 成功响应 (200 OK) |
 | --- | --- | --- | --- | --- | --- |
 | **2. 绑定默认角色 (内部)** | `POST` | `/internal/roles/bind-default` | **Body**: `{ "userId": 12345 }`    _(Feign通常转为_`@RequestParam`_)_ | 系统内部 | `{ "code": 200, "message": "默认角色绑定成功", "data": null }` (或者直接返回 HTTP 204 No Content) |
-| **3. 查询用户角色 (内部)** | `GET` | `/internal/users/{userId}/role` | _无_ (userId从路径获取) | 系统内部 | `{ "code": 200, "message": "Success", "data": { "roleCode": "admin" } }` |
-| **4. 升级用户角色** | `PUT` | `/users/{userId}/upgrade-to-admin` | _无_ | 超级管理员 | `{ "code": 200, "message": "用户角色已升级为管理员", "data": { "userId": 456, "newRole": "admin" } }` |
-| **5. 降级用户角色** | `PUT` | `/users/{userId}/downgrade-to-user` | _无_ | 超级管理员 | `{ "code": 200, "message": "用户角色已降级为普通用户", "data": { "userId": 789, "newRole": "user" } }` |
+| **3. 查询用户角色 (内部)** | `GET` | `/internal/user/{userId}/role` | _无_ (userId从路径获取) | 系统内部 | `{ "code": 200, "message": "Success", "data": { "roleCode": "admin" } }` |
+| **4. 升级用户角色** | `PUT` | `/user/{userId}/upgrade-to-admin` | _无_ | 超级管理员 | `{ "code": 200, "message": "用户角色已升级为管理员", "data": { "userId": 456, "newRole": "admin" } }` |
+| **5. 降级用户角色** | `PUT` | `/user/{userId}/downgrade-to-user` | _无_ | 超级管理员 | `{ "code": 200, "message": "用户角色已降级为普通用户", "data": { "userId": 789, "newRole": "user" } }` |
 
 
 #### **接口设计思考**:
-+ **资源化**: `GET /users`, `GET /users/{userId}`, `PUT /users/{userId}` 都体现了对 `user` 资源的增删改查。
-+ **动词与名词**: HTTP方法（GET, POST, PUT, DELETE）是动词，URL路径尽量使用名词（资源）。对于无法清晰映射到CRUD的操作，如“重置密码”，可以使用子资源或动作形式，如 `/users/{userId}/reset-password`，这比 `/resetPassword` 更符合REST风格。
-+ **内部与外部隔离**: 使用 `/internal` 路径前缀明确标记了服务间调用的接口，便于在网关层设置访问控制策略，防止其被外部直接调用。
++ **资源化**: `GET /users`, `GET /user/{userId}`, `PUT /user/{userId}` 都体现了对 `user` 资源的增删改查。
++ **动词与名词**: HTTP方法（GET, POST, PUT, DELETE）是动词，URL路径尽量使用名词（资源）。对于无法清晰映射到CRUD的操作，如“重置密码”，可以使用子资源或动作形式，如 `/user/{userId}/reset-password`，这比 `/resetPassword` 更符合REST风格。
++ **内部与外部隔离**: 使用 `/internal` 路径前缀明确标记了服务间调用的接口。
 + **参数传递**:
     - **路径参数 (**`{userId}`**)**: 用于唯一标识一个资源。
     - **查询参数 (**`?key=value`**)**: 用于对资源集合进行过滤、排序、分页。
     - **请求体 (**`Body`**)**: 用于传递复杂的资源对象（如创建或修改用户）。
 
- ---
+---
 
 ### **三、 日志服务 (Logging Service)**
 这个服务是纯粹的后台消费者，**不提供任何RESTful接口**。它只通过`RocketMQ`的SDK与消息队列进行交互，消费`user-service`和`permission-service`产生的日志消息。
@@ -256,7 +253,7 @@
 
 
 
- ---
+---
 
 
 
@@ -270,7 +267,7 @@
 3. **命名规范**: 表名使用复数形式（如 `users`），字段名使用下划线命名法（如 `user_id`），清晰易懂。
 4. **索引优化**: 为频繁查询的字段（如外键、唯一键、查询条件字段）创建索引，提高查询性能。
 
- ---
+---
 
 ### **一、 用户服务数据库 (分库分表)**
 这个服务的数据将被水平分片到两个数据库 (`user_db_0`, `user_db_1`) 中，每个数据库中又包含两个表 (`users_0`, `users_1`)。ShardingSphere 将会管理这些物理表，对应用层来说，它只操作逻辑表 `users`。
@@ -284,45 +281,69 @@
 **数据库 1: **`user_db_0`
 
 ```sql
+-- 创建数据库 user_db_0
 CREATE DATABASE IF NOT EXISTS user_db_0 CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
 USE user_db_0;
 
 -- 分表 1
 CREATE TABLE users_0 (
-  `user_id` BIGINT NOT NULL COMMENT '用户ID (雪花算法生成)',
-  `username` VARCHAR(50) NOT NULL COMMENT '用户名',
-  `password` VARCHAR(255) NOT NULL COMMENT '加密后的密码',
-  `email` VARCHAR(100) NULL COMMENT '邮箱',
-  `phone` VARCHAR(20) NULL COMMENT '手机号',
-  `gmt_create` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
-  `gmt_modified` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '修改时间',
-  PRIMARY KEY (`user_id`),
-  UNIQUE KEY `uk_username` (`username`)
+                         `user_id` BIGINT NOT NULL COMMENT '用户ID (雪花算法生成)',
+                         `username` VARCHAR(50) NOT NULL COMMENT '用户名',
+                         `password` VARCHAR(255) NOT NULL COMMENT '加密后的密码',
+                         `email` VARCHAR(100) NULL COMMENT '邮箱',
+                         `phone` VARCHAR(20) NULL COMMENT '手机号',
+                         `gmt_create` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
+                         `gmt_modified` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '修改时间',
+                         PRIMARY KEY (`user_id`),
+                         UNIQUE KEY `uk_username` (`username`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='用户表分片0';
 
 -- 分表 2
 CREATE TABLE users_1 (
-  `user_id` BIGINT NOT NULL COMMENT '用户ID (雪花算法生成)',
-  `username` VARCHAR(50) NOT NULL COMMENT '用户名',
-  `password` VARCHAR(255) NOT NULL COMMENT '加密后的密码',
-  `email` VARCHAR(100) NULL COMMENT '邮箱',
-  `phone` VARCHAR(20) NULL COMMENT '手机号',
-  `gmt_create` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
-  `gmt_modified` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '修改时间',
-  PRIMARY KEY (`user_id`),
-  UNIQUE KEY `uk_username` (`username`)
+                         `user_id` BIGINT NOT NULL COMMENT '用户ID (雪花算法生成)',
+                         `username` VARCHAR(50) NOT NULL COMMENT '用户名',
+                         `password` VARCHAR(255) NOT NULL COMMENT '加密后的密码',
+                         `email` VARCHAR(100) NULL COMMENT '邮箱',
+                         `phone` VARCHAR(20) NULL COMMENT '手机号',
+                         `gmt_create` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
+                         `gmt_modified` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '修改时间',
+                         PRIMARY KEY (`user_id`),
+                         UNIQUE KEY `uk_username` (`username`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='用户表分片1';
 ```
 
 **数据库 2: **`user_db_1`
 
 ```sql
+-- 创建数据库 user_db_1
 CREATE DATABASE IF NOT EXISTS user_db_1 CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
 USE user_db_1;
 
--- 结构与 user_db_0 中的 users_0 和 users_1 完全相同
-CREATE TABLE users_0 ( ... );
-CREATE TABLE users_1 ( ... );
+-- 分表 1
+CREATE TABLE users_0 (
+                         `user_id` BIGINT NOT NULL COMMENT '用户ID (雪花算法生成)',
+                         `username` VARCHAR(50) NOT NULL COMMENT '用户名',
+                         `password` VARCHAR(255) NOT NULL COMMENT '加密后的密码',
+                         `email` VARCHAR(100) NULL COMMENT '邮箱',
+                         `phone` VARCHAR(20) NULL COMMENT '手机号',
+                         `gmt_create` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
+                         `gmt_modified` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '修改时间',
+                         PRIMARY KEY (`user_id`),
+                         UNIQUE KEY `uk_username` (`username`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='用户表分片0';
+
+-- 分表 2
+CREATE TABLE users_1 (
+                         `user_id` BIGINT NOT NULL COMMENT '用户ID (雪花算法生成)',
+                         `username` VARCHAR(50) NOT NULL COMMENT '用户名',
+                         `password` VARCHAR(255) NOT NULL COMMENT '加密后的密码',
+                         `email` VARCHAR(100) NULL COMMENT '邮箱',
+                         `phone` VARCHAR(20) NULL COMMENT '手机号',
+                         `gmt_create` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
+                         `gmt_modified` TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '修改时间',
+                         PRIMARY KEY (`user_id`),
+                         UNIQUE KEY `uk_username` (`username`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='用户表分片1';
 ```
 
 #### **关键字段说明**:
@@ -330,7 +351,7 @@ CREATE TABLE users_1 ( ... );
 + `username`: 用户名必须唯一，因此创建了唯一索引 `uk_username`。
 + `gmt_create` / `gmt_modified`: 记录创建和修改时间，是表设计的良好实践。
 
- ---
+---
 
 ### **二、 权限服务数据库 (单库)**
 权限相关的数据量相对较小且稳定，不需要分片。
@@ -379,7 +400,7 @@ INSERT INTO `user_roles` (`user_id`, `role_id`) VALUES (1, 1);
     - `uk_user_id`: **唯一索引**，确保一个用户只有一个角色，符合题目要求。
     - `idx_role_id`: 普通索引，如果需要查询某个角色下的所有用户，这个索引会很有用。
 
- ---
+---
 
 ### **三、 日志服务数据库 (单库)**
 日志数据会持续增长，但在本系统简化版中，我们先使用单库单表。在生产环境中，可能会考虑使用时序数据库（如 InfluxDB）或对日志表进行按月分表。
@@ -415,14 +436,14 @@ CREATE TABLE operation_logs (
 
 
 
- ---
+---
 
 
 
 ## 领域模型和实体分析
 这份分析将把设计文档中的业务概念，转化为软件开发中具体的类和对象，主要包括 **实体 (Entity)**、**数据传输对象 (DTO)** 和 **视图对象 (VO)**，并阐明它们之间的关系和在各个微服务中的归属。
 
- ---
+---
 
 ### **一、 领域模型分析概述**
 领域模型是业务领域的核心概念及其关系的软件化表达。在微服务架构中，每个服务都维护着自己边界内的领域模型。
@@ -433,7 +454,7 @@ CREATE TABLE operation_logs (
 
 这种 **Entity -> DTO / VO** 的分层模型是构建健壮、安全、可维护的现代应用的基石。
 
- ---
+---
 
 ### **二、 核心实体 (Entity) 分析**
 #### **1. 用户 (User)**
@@ -577,7 +598,7 @@ public class OperationLog {
 }
 ```
 
- ---
+---
 
 ### **三、 数据传输对象 (DTO) 分析**
 DTO 是 API 的“输入契约”，它们精确地定义了客户端需要提供哪些数据来完成一个操作。
@@ -656,7 +677,7 @@ public class OperationLogDTO implements Serializable {
 }
 ```
 
- ---
+---
 
 ### **四、 视图对象 (VO) 分析**
 VO 是 API 的“输出契约”，它们定义了成功操作后返回给客户端的数据结构。
@@ -702,7 +723,7 @@ public class PageVO<T> {
 
 例如，查询用户列表的接口将返回 `PageVO<UserVO>` 类型的数据。
 
- ---
+---
 
 ### **五、 实体关系图**
 下图展示了核心实体之间的关系（跨越了不同的数据库）。
@@ -717,12 +738,12 @@ public class PageVO<T> {
 
 
 
- ---
+---
 
 
 
 ## 详细用例规格说明
- ---
+---
 
 ### **详细用例规格说明书**
 本文档概述了用户权限管理系统每个功能需求的详细流程。
@@ -730,7 +751,7 @@ public class PageVO<T> {
 ### **第一部分: 用户服务用例**
 `user-service` 负责所有以用户为中心的操作，包括注册、认证和个人资料管理。
 
- ---
+---
 
 #### **1. 用例: 用户注册**
 + **Actor(s)**: 未认证的用户 (公开)
@@ -738,7 +759,7 @@ public class PageVO<T> {
 + **前置条件**: 无。
 
 ##### **基本流程 (Happy Path)**
-1. **API 请求**: 客户端向 API 网关发送一个 `POST` 请求，该请求被路由到 `user-service` 的 `/api/user/register` 端点。请求体是一个 JSON 对象: `{ "username": "string", "password": "string", "email": "string" }`。
+1. **API 请求**: 客户端向 `/user/register` 发送一个 `POST` 请求。请求体是一个 JSON 对象: `{ "username": "string", "password": "string", "email": "string" }`。
 2. **事务启动 (**`user-service`**)**: 控制器接收到请求。服务方法被 `@GlobalTransactional` 注解标记，这会通知 **Seata** 开始一个新的全局事务。
 3. **ID 生成 (**`user-service`**)**: **ShardingSphere-JDBC** 的内置雪花算法为新用户生成一个全局唯一的 `user_id`。这个 `user_id` 将作为分片键。
 4. **用户数据持久化 (**`user-service`**)**:
@@ -748,7 +769,7 @@ public class PageVO<T> {
 5. **为角色绑定进行 RPC 调用 (**`user-service`** -> **`permission-service`**)**:
     - `user-service` 调用其 `PermissionFeignClient`（一个声明式的 **OpenFeign** 接口）来调用 `bindDefaultRole` 方法。
     - **Nacos** 提供服务发现，将逻辑服务名 `permission-service` 解析为具体的 IP 和端口，从而实现 RPC 调用。
-    - 请求被发送到 `permission-service` 的 `/api/permission/internal/roles/bind-default` 端点，并携带新的 `userId`。
+    - 请求被发送到 `permission-service` 的 `/permission/internal/roles/bind-default` 端点，并携带新的 `userId`。
 6. **角色持久化 (**`permission-service`**)**:
     - `permission-service` 接收到内部请求。
     - 它在其专用的 **MySQL** 数据库 (`permission_db`) 中的 `user_roles` 表里执行一次 `INSERT` 操作，将 `userId` 与默认的“普通用户(user)”的 `role_id` 关联起来。
@@ -772,7 +793,7 @@ public class PageVO<T> {
     4. `user-service` 中的 Seata 资源管理器 (RM) 执行一条 `DELETE FROM users WHERE user_id = ?` 语句，以移除新创建的用户，确保数据原子性。
     5. `user-service` 返回 `503 Service Unavailable` 错误，并且不会向 RocketMQ 发送消息。
 
- ---
+---
 
 #### **2. 用例: 用户登录**
 + **Actor(s)**: 未认证的用户 (公开)
@@ -780,7 +801,7 @@ public class PageVO<T> {
 + **前置条件**: 用户必须有一个已注册的账户。
 
 ##### **基本流程 (Happy Path)**
-1. **API 请求**: 客户端发送一个 `POST` 请求到 `/api/user/login`，携带 `{ "username": "string", "password": "string" }`。
+1. **API 请求**: 客户端发送一个 `POST` 请求到 `/user/login`，携带 `{ "username": "string", "password": "string" }`。
 2. **用户检索 (**`user-service`**)**:
     - 服务接收到请求。
     - 它使用 **ShardingSphere-JDBC** 按 `username` 查询逻辑表 `users`。由于 `username` 不是分片键，ShardingSphere 将把此查询广播到所有物理的 `users` 表（`user_db_0` 和 `user_db_1` 中的 `users_0` 和 `users_1`）并合并结果。
@@ -798,7 +819,7 @@ public class PageVO<T> {
     1. 在步骤 2，ShardingSphere-JDBC 无法连接到 MySQL 数据库。
     2. 抛出异常。服务返回 `503 Service Unavailable` 错误。
 
- ---
+---
 
 #### **3. 用例: 用户登出**
 + **Actor(s)**: 已登录的用户
@@ -806,7 +827,7 @@ public class PageVO<T> {
 + **前置条件**: 用户已登录并提供一个有效的 JWT。
 
 ##### **基本流程 (Happy Path)**
-1. **API 请求**: 客户端发送一个 `POST` 请求到 `/api/user/logout`，并携带一个有效的 `Authorization: Bearer <jwt_token>` 请求头。
+1. **API 请求**: 客户端发送一个 `POST` 请求到 `/user/logout`，并携带一个有效的 `Authorization: Bearer <jwt_token>` 请求头。
 2. **令牌验证 (**`user-service`**)**: 一个拦截器或安全过滤器验证 **JWT**。如果有效，它会提取出 `userId`。
 3. **异步日志记录 (**`user-service`**)**: 服务向 **RocketMQ** 发送一条 "LOGOUT" 事件消息。设计文档指出，要真正使 JWT 失效，需要使用像 Redis 这样的缓存实现黑名单方法，但对于本系统，简化为仅记录操作。
 4. **API 响应**: 服务返回一个 `200 OK` 响应：`{ "code": 200, "message": "登出成功", "data": null }`。
@@ -816,7 +837,7 @@ public class PageVO<T> {
     1. 在步骤 2，JWT 验证失败。
     2. 安全过滤器拒绝该请求，返回 `401 Unauthorized` 错误。
 
- ---
+---
 
 #### **4. 用例: 获取当前登录用户信息**
 + **Actor(s)**: 已登录的用户
@@ -824,7 +845,7 @@ public class PageVO<T> {
 + **前置条件**: 用户已登录并提供一个有效的 JWT。
 
 ##### **基本流程 (Happy Path)**
-1. **API 请求**: 客户端发送一个 `GET` 请求到 `/api/user/me`，并在请求头中携带一个有效的 JWT。
+1. **API 请求**: 客户端发送一个 `GET` 请求到 `/user/me`，并在请求头中携带一个有效的 JWT。
 2. **令牌验证 (**`user-service`**)**: 一个安全过滤器验证 **JWT** 并从其 payload 中提取出 `userId`。
 3. **数据检索 (**`user-service`**)**:
     - 服务使用提取出的 `userId` 来查询逻辑表 `users`。
@@ -836,7 +857,7 @@ public class PageVO<T> {
     1. 在步骤 3，没有找到令牌中 `userId` 对应的用户（一个不太可能的边缘情况，例如用户在令牌签发后被删除）。
     2. 服务返回 `404 Not Found` 错误。
 
- ---
+---
 
 #### **5. 用例: 分页查询用户列表**
 + **Actor(s)**: 管理员, 超级管理员
@@ -844,10 +865,10 @@ public class PageVO<T> {
 + **前置条件**: Actor 以“管理员”或“超级管理员”角色登录。
 
 ##### **基本流程 (Happy Path)**
-1. **API 请求**: 一个管理员客户端发送一个 `GET` 请求到 `/api/user/users`，带有查询参数如 `?page=1&size=10&sort=gmt_create,desc&username=test` 和一个有效的 JWT。
+1. **API 请求**: 一个管理员客户端发送一个 `GET` 请求到 `/user/users`，带有查询参数如 `?page=1&size=10&sort=gmt_create,desc&username=test` 和一个有效的 JWT。
 2. **认证和授权 (**`user-service`**)**:
     - 安全过滤器验证 **JWT** 并提取操作者的 `userId`。
-    - 为了检查权限，`user-service` 通过 **OpenFeign** 向 `permission-service` 的 `/internal/users/{userId}/role` 端点发起 RPC 调用，该端点通过 **Nacos** 进行服务发现。
+    - 为了检查权限，`user-service` 通过 **OpenFeign** 向 `permission-service` 的 `/internal/user/{userId}/role` 端点发起 RPC 调用，该端点通过 **Nacos** 进行服务发现。
     - `permission-service` 查询其 **MySQL** 数据库并返回操作者的角色代码 (例如 "admin" 或 "super_admin")。
     - `user-service` 验证该角色拥有足够的权限。
 3. **数据检索 (**`user-service`**)**:
@@ -860,7 +881,7 @@ public class PageVO<T> {
     1. 在步骤 2，从 `permission-service` 返回的角色是 'user'。
     2. `user-service` 拒绝该请求并返回 `403 Forbidden` 错误。
 
- ---
+---
 
 #### **6. & 7. 用例: 查询/修改指定用户信息**
 + **Actor(s)**: 用户本人, 管理员, 超级管理员
@@ -868,7 +889,7 @@ public class PageVO<T> {
 + **前置条件**: Actor 已登录并拥有相应权限。
 
 ##### **基本流程 (Happy Path)**
-1. **API 请求**: 客户端发送一个 `GET` (用于查询) 或 `PUT` (用于修改) 请求到 `/api/users/{userId}`。`PUT` 请求包含一个带有待更新字段的请求体。需要一个有效的 JWT。
+1. **API 请求**: 客户端发送一个 `GET` (用于查询) 或 `PUT` (用于修改) 请求到 `/user/{userId}`。`PUT` 请求包含一个带有待更新字段的请求体。需要一个有效的 JWT。
 2. **认证和授权 (**`user-service`**)**:
     - 服务验证 **JWT** 并获取操作者的 `userId`。
     - 它检查操作者的 `userId` 是否与 URL 路径中的 `{userId}` 匹配。如果匹配，则授予权限 ("本人")。
@@ -888,7 +909,7 @@ public class PageVO<T> {
     1. 在步骤 3，`{userId}` 不存在。
     2. 服务返回 `404 Not Found` 错误。
 
- ---
+---
 
 #### **8. & 9. 用例: 修改/重置密码**
 + **Actor(s)**: 用户本人 (修改), 管理员/超级管理员 (重置)
@@ -897,8 +918,8 @@ public class PageVO<T> {
 
 ##### **基本流程 (Happy Path)**
 1. **API 请求**:
-    - **修改**: `PUT` 到 `/api/user/password`，请求体为 `{ "oldPassword": "...", "newPassword": "..." }`。
-    - **重置**: `POST` 到 `/api/user/users/{userId}/reset-password`。
+    - **修改**: `PUT` 到 `/user/password`，请求体为 `{ "oldPassword": "...", "newPassword": "..." }`。
+    - **重置**: `POST` 到 `/user/user/{userId}/reset-password`。
 2. **认证和授权 (**`user-service`**)**:
     - **修改**: 服务从 JWT 获取 `userId`。它通过 **ShardingSphere-JDBC** 从 **MySQL** 查询用户并验证 `oldPassword`。
     - **重置**: 服务执行与用例 7 中相同的权限检查，以确保操作者是 admin/super_admin。
@@ -917,7 +938,7 @@ public class PageVO<T> {
 ### **第二部分: 权限服务用例**
 `permission-service` 是一个面向内部的服务，用于管理角色及其与用户的分配关系。
 
- ---
+---
 
 #### **1. 用例: 角色数据初始化**
 + **Actor(s)**: 系统 (启动时)
@@ -935,7 +956,7 @@ public class PageVO<T> {
     1. 在步骤 2，服务无法连接到 `permission_db`。
     2. 启动过程将失败，Spring Boot 应用将关闭，从而防止服务在不一致的状态下运行。
 
- ---
+---
 
 #### **2. & 3. 用例: 绑定默认角色 / 查询用户角色**
 + **Actor(s)**: `user-service` (系统内部)
@@ -944,8 +965,8 @@ public class PageVO<T> {
 
 ##### **基本流程 (Happy Path)**
 1. **API 请求 (**`permission-service`**)**: 服务通过 **OpenFeign** 从 `user-service` 接收一个内部请求。
-    - **绑定**: `POST`到 `/api/permission/internal/roles/bind-default`，携带一个 `userId`。
-    - **查询**: `GET`到 `/api/permission/internal/users/{userId}/role`。
+    - **绑定**: `POST`到 `/permission/internal/roles/bind-default`，携带一个 `userId`。
+    - **查询**: `GET`到 `/permission/internal/user/{userId}/role`。
 2. **数据库操作 (**`permission-service`**)**:
     - **绑定**: 它对 `user_roles` 表执行一个 `INSERT`。如果在用户注册过程中调用，此操作是 **Seata** 分布式事务中的一个分支。
     - **查询**: 它执行一个 `SELECT` 语句，连接 `user_roles` 和 `roles` 表，以查找给定 `userId` 的 `role_code`。
@@ -961,7 +982,7 @@ public class PageVO<T> {
     1. `SELECT` 查询没有返回结果。
     2. 服务应返回一个合理的默认值或一个错误，调用方 `user-service` 必须优雅地处理此情况（例如，通过拒绝访问）。
 
- ---
+---
 
 #### **4. & 5. 用例: 升级/降级用户角色**
 + **Actor(s)**: 超级管理员
@@ -969,10 +990,10 @@ public class PageVO<T> {
 + **前置条件**: Actor 以 'super_admin' 角色登录。
 
 ##### **基本流程 (Happy Path)**
-1. **API 请求 (**`permission-service`**)**: 一个超级管理员通过前端，导致一个请求被发送到 API 网关，并路由到 `permission-service`。
-    - **升级**: `PUT` 到 `/api/permission/users/{userId}/upgrade-to-admin`。
-    - **降级**: `PUT` 到 `/api/permission/users/{userId}/downgrade-to-user`。
-2. **认证**: 请求必须通过一个安全过滤器，该过滤器验证 JWT 并确认操作者拥有 'super_admin' 角色。（这意味着 `permission-service` 也有一个检查角色的机制，或者它信任 API 网关来强制执行此操作）。
+1. **API 请求 (**`permission-service`**)**: 一个超级管理员通过前端，发送一个请求到 `permission-service`。
+    - **升级**: `PUT` 到 `/permission/user/{userId}/upgrade-to-admin`。
+    - **降级**: `PUT` 到 `/permission/user/{userId}/downgrade-to-user`。
+2. **认证**: 请求必须通过一个安全过滤器，该过滤器验证 JWT 并确认操作者拥有 'super_admin' 角色。（这意味着 `permission-service` 也有一个检查角色的机制）。
 3. **数据库操作 (**`permission-service`**)**: 服务对 `user_roles` 表执行一个 `UPDATE`，更改指定 `userId` 的 `role_id`。
 4. **异步日志记录 (**`permission-service`**)**: 服务可以有选择地向 **RocketMQ** 发送自己的日志消息 ("UPGRADE_ROLE", "DOWNGRADE_ROLE")，以记录这些关键的安全事件。
 5. **API 响应**: 返回一个 `200 OK` 确认变更。
@@ -988,7 +1009,7 @@ public class PageVO<T> {
 ### **第三部分: 日志服务用例**
 `logging-service` 是一个没有直接 API 暴露的后台处理器。
 
- ---
+---
 
 #### **1. 用例: 异步记录操作日志**
 + **Actor(s)**: 系统 (`user-service`, `permission-service`)
